--- a/index.html
+++ b/index.html
@@ -14,10 +14,14 @@
     <div>
         <h1>Menú comprar</h1>
         <div id="menuCompra">
-            
+
+        </div>
+        <div id="div2">
+            <button id="boton3">Boton3</button>
         </div>
     </div>
 </body>
 <script src="script.js"></script>
+
 
 </html>
